--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "homepage": "https://dniherdiana.github.io/vite-web-rt",
+  "homepage": "https://dniherdiana.github.io/rt01/",
   "name": "rt01-web",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy": "pnpm run build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
