--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://dniherdiana.github.io/rt01/",
+  "homepage": "https://dniherdiana.github.io/rt01",
   "name": "rt01-web",
   "private": true,
   "version": "0.0.0",
